Add ToastManger as a centralized entity to manage toasts. Toast events will be published in a LiveEvent and observed in MainActivity. ToastManager then can be injected in ViewModels.

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <!--  Splash  -->
+    <string name="connection_failed">Connection failed</string>
+
     <!--  Login  -->
     <string name="sign_in">Sign in</string>
     <string name="sign_in_paragraph">Sign in to continue</string>
